envoy_conf_eds/dynamic-clusters/lds.yaml
version_info: "0"
resources:
- "@type": "type.googleapis.com/envoy.api.v2.Listener"
  name: listener_0
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 10000
  filter_chains:
  - filters:
    - name: envoy.filters.network.http_connection_manager
      typed_config:
        "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
        stat_prefix: ingress_http
        route_config: # RDS
          name: local_route
          virtual_hosts:
          - name: local_service
            domains: ["*"]
            routes:
            - match:
                prefix: "/"
              route:
                cluster: service_google
        http_filters:
        - name: envoy.filters.http.router

- "@type": "type.googleapis.com/envoy.api.v2.Listener"
  name: listener_1
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 10001
  filter_chains:
  - filters:
    - name: envoy.filters.network.http_connection_manager
      typed_config:
        "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
        stat_prefix: ingress_http
        route_config: # RDS
          name: local_route1
          virtual_hosts:
          - name: local_service1
            domains: ["*"]
            routes:
            - match:
                prefix: "/"
              route:
                cluster: service_google1
        http_filters:
        - name: envoy.filters.http.router
